--- a/packages/gatsby-theme-use-shopping-cart/package.json
+++ b/packages/gatsby-theme-use-shopping-cart/package.json
@@ -30,14 +30,17 @@
     "react-dom": "^16.9.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/styles": "^4.4.3",
+    "@reach/dialog": "^0.11.2",
     "@stripe/stripe-js": "^1.7.0",
     "dotenv": "^8.1.0",
     "gatsby-image": "^2.4.12",
+    "gatsby-plugin-material-ui": "^2.1.6",
     "gatsby-plugin-page-creator": "^2.1.25",
     "gatsby-plugin-react-helmet": "^3.1.11",
     "gatsby-plugin-sharp": "^2.6.17",
     "gatsby-plugin-stripe": "^1.2.3",
-    "gatsby-plugin-material-ui": "^2.1.6",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-filesystem": "^2.1.31",
     "gatsby-source-graphql": "^2.1.18",
@@ -51,8 +54,6 @@
     "stripe": "^8.66.0",
     "theme-ui": "^0.3.1",
     "use-shopping-cart": "^2.1.0",
-    "yup": "^0.27.0",
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/styles": "^4.4.3"
+    "yup": "^0.27.0"
   }
 }
