--- a/packages/gatsby-theme-use-shopping-cart/package.json
+++ b/packages/gatsby-theme-use-shopping-cart/package.json
@@ -53,7 +53,7 @@
     "react-use": "^12.7.1",
     "stripe": "^8.120.0",
     "theme-ui": "^0.3.1",
-    "use-shopping-cart": "^2.1.0",
+    "use-shopping-cart": "^2.3.0-beta.0",
     "yup": "^0.27.0"
   }
 }
